--- a/package.json
+++ b/package.json
@@ -4,23 +4,36 @@
   "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently --kill-others \"yarn server\" vite ",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@heroicons/react": "^2.0.12",
     "@material-tailwind/react": "^1.2.4",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "json-server": "^0.17.1",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.2",
+    "react-scroll": "^1.8.9",
+    "swiper": "^8.4.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
